--- a/src/Navigation/MainNavbar.module.css
+++ b/src/Navigation/MainNavbar.module.css
@@ -2,3 +2,13 @@
     background-color: black;
     height: 60px;
 }
+
+.foodList{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
