--- a/src/Navigation/MainNavbar.module.css
+++ b/src/Navigation/MainNavbar.module.css
@@ -1,14 +1,19 @@
 .root {
-    background-color: black;
-    height: 60px;
+  background-color: black;
+  height: 60px;
 }
 
-.foodList{
-    width: 100%;
-    height: 100%;
+.foodList {
+  width: 100%;
+  height: 100%;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
+.active {
+  background-color: #b7e6ff;
+  color: black;
 }
