--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,6 +6,8 @@
   align-items: center;
   overflow: auto;
   background-color: #1b2530;
+
+  color: black;
 }
 
 .app {
@@ -20,15 +22,30 @@
 }
 
 .navBar {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+
+}
+
+.rootGrid{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.mainGrid{
+  display: flex;
+  flex-grow: 1;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .cardGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
+  display: grid;
+  flex-grow: 1;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-rows: 1fr 1fr;
   padding: 20px;
 }
+
