--- a/src/App.module.css
+++ b/src/App.module.css
@@ -21,6 +21,13 @@
   margin: auto;
 }
 
+.topNav{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #e5e8eb;
+}
+
 .navBar {
 
 }
@@ -38,6 +45,7 @@
   flex-grow: 1;
   overflow-y: auto;
   overflow-x: hidden;
+  padding: 10px;
 }
 
 .cardGrid {
@@ -49,3 +57,7 @@
   padding: 20px;
 }
 
+.orderButton{
+  background-color: #ccd7e3;
+  border: 1px solid black
+}
