--- a/src/Main/FoodCard.module.css
+++ b/src/Main/FoodCard.module.css
@@ -20,8 +20,11 @@
   cursor: pointer;
   position: relative;
   animation: fadeInPop 0.3s ease-out;
-  opacity: 0; /* Start hidden */
-  animation-fill-mode: forwards; /* Keep the final state of the animation */
+  opacity: 0;
+  animation-fill-mode: forwards; 
+
+  -webkit-tap-highlight-color: transparent;
+  
 }
 
 .cardRoot:nth-child(1) {
@@ -100,6 +103,7 @@
   bottom: 10px;
   right: 10px;
   background-color: #f5f5f5;
+  color: black;
   border: none;
   border-radius: 50%;
   width: 40px;
@@ -109,3 +113,4 @@
   align-items: center;
   cursor: pointer;
 }
+
