--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,7 +13,7 @@
   .app {
     width: 1024px;
     height: 640px;
-    border: 20px solid black;
+    border: 20px solid rgb(36, 36, 36);
     position: relative;
     border-radius: 10px;
     box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
