--- a/src/Main/FoodCard.module.css
+++ b/src/Main/FoodCard.module.css
@@ -1,7 +1,7 @@
 @keyframes fadeInPop {
   0% {
     opacity: 0.5;
-    transform: scale(0.95);
+    /* transform: scale(0.95); */
   }
   100% {
     opacity: 1;
@@ -10,21 +10,23 @@
 }
 
 .cardRoot {
+  opacity: 0;
+  /* transform: scale(0.95); */
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
   overflow: hidden;
   cursor: pointer;
   position: relative;
-  animation: fadeInPop 0.3s ease-out;
-  opacity: 0;
-  animation-fill-mode: forwards; 
+  animation: fadeInPop 0.3s;
+  animation-fill-mode: forwards;
 
   -webkit-tap-highlight-color: transparent;
-  
+
+  border: 1px solid #c3c3c3;
 }
 
 .cardRoot:nth-child(1) {
@@ -88,29 +90,68 @@
   height: 100%;
   object-fit: cover;
 
-  position: absolute; /* Position the image absolutely within the parent */
+  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); /* Center the image */
+  transform: translate(-50%, -50%);
+
+  border-bottom: 1px solid #0a0a0a;
 }
 
 .content {
   padding: 10px;
+  background-color: #ebf2f7d2;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.contentTitle {
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 1.1;
+  /* justify text */
+  text-wrap: wrap;
+}
+
+.contentPrice {
+  font-size: 14px;
+  font-weight: light;
+  color: #000000;
+}
+
+.TaxIncludedSpan {
+  font-size: 10px;
+  color: #000000;
+}
+
+.priceCont {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 6px;
 }
 
 .addButton {
   position: absolute;
-  bottom: 10px;
-  right: 10px;
-  background-color: #f5f5f5;
+  bottom: 8px;
+  right: 8px;
+  background-color: #ebf3ff;
   color: black;
-  border: none;
+  border: 1px solid #00000033;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 36px;
+  height: 36px;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
 }
 
+.addButton:active {
+  box-shadow: none;
+  background-color: #d4dae3;
+}
