--- a/src/Navigation/MainNavbar.module.css
+++ b/src/Navigation/MainNavbar.module.css
@@ -1,6 +1,7 @@
 .root {
-  background-color: #e5e8eb;
-  height: 60px;
+  background-color: #abbfd5;
+  height: 70px;
+  /* border: 1px solid #181818; */
 }
 
 .foodList {
@@ -16,9 +17,36 @@
 .button {
   color: black;
   background-color: white;
+  border-radius: 24px;
+  font-size: 14px;
+  height: 40px;
+  border: 1px solid #181818;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  font-weight: bold;
 }
 
 .active {
-  background-color: #b7e6ff;
-  color: black;
+  background-color: #6f94bc;
+  color: white;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05),
+    inset 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+
+/* Show a triangle facing the button below the active button */
+.active::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #ffffff;
+  margin: 0 auto;
+  bottom: -16px;
+  left: 50%;
+  transform: translateX(-50%);
+  /* drop shadow */
+  /* filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.5)); */
 }
