--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,19 +1,20 @@
 .root {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
   background-color: #1b2530;
 
   color: black;
 }
 
 .app {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   width: 1024px;
   height: 640px;
   border: 20px solid rgb(36, 36, 36);
+  position: relative;
   border-radius: 10px;
   box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
   background: white;
