--- a/src/MainScreen.module.css
+++ b/src/MainScreen.module.css
@@ -42,7 +42,9 @@
   display: flex;
   flex-direction: column;
 
-  border-left: 1px solid #232323;
+  border-left: 1px solid #838383;
+  background-color: white;
+  padding: 0px 10px;
 }
 
 .navBar {
@@ -72,9 +74,76 @@
   z-index: 0;
 }
 
+.bottomCont {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 16px 0;
+}
+
+.priceCont {
+  display: flex;
+  justify-content: start;
+  align-items: end;
+  gap: 4px;
+}
+
+.totalText {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.totalPrice {
+  font-size: 24px;
+}
+
+.taxInc {
+  font-size: 12px;
+  font-weight: light;
+  color: #121212;
+  margin-bottom: 6px;
+}
+
+.bottomButton {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+
+.restartButton {
+  color: #e51a1a;
+  background-color: transparent;
+  padding: 6px 4px;
+  margin: 0 10px;
+  border: none;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 .orderButton {
-  background-color: #ccd7e3;
+  background-color: #6f94bc;
   border: 1px solid black;
+
+  padding: 10px 0;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+
+  text-transform: uppercase;
+  color: white;
+
+  box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+  flex-grow: 1;
+}
+
+.orderButton:active {
+  box-shadow: inset 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  background-color: #688bb0;
 }
 
 .orderAmount {
@@ -112,48 +181,10 @@
   animation: none;
 }
 
-.orderList {
+.orderListComp {
   flex-grow: 1;
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
-
+  width: 100%;
   overflow-y: auto;
-
-  padding: 10px;
-  gap: 10px;
-
-  background-color: grey;
-}
-
-.orderList::-webkit-scrollbar {
-  width: 10px;
-}
-
-.orderList::-webkit-scrollbar-thumb {
-  background-color: #e5e8eb;
-  border-radius: 10px;
-}
-
-.orderItem {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  gap: 5px;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.orderItemImage {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-
-.bottomButton {
 }
 
 .orderCont {
@@ -161,5 +192,41 @@
   justify-content: space-between;
   align-items: center;
   gap: 10px;
-  padding: 10px;
+  padding: 5px 0;
+}
+
+.orderText {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.orderTextCont {
+  display: flex;
+  justify-content: start;
+  align-items: end;
+  gap: 4px;
+}
+
+.callStaffButton {
+  background-color: #e51a1a;
+  color: white;
+  padding: 6px 14px;
+  border-radius: 8px;
+  border: 1px solid #575757;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+
+  box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.callStaffButton:active {
+  box-shadow: inset 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  background-color: #a00000;
+}
+
+.orderLength {
+  font-size: 24px;
+  font-weight: light;
+  margin-bottom: 5px;
 }
