--- a/src/Reset.css
+++ b/src/Reset.css
@@ -1,20 +1,16 @@
-/* 1. Use a more-intuitive box-sizing model */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
-/* 2. Remove default margin */
 * {
   margin: 0;
+  -webkit-user-select: none;
 }
 body {
-  /* 3. Add accessible line-height */
   line-height: 1.5;
-  /* 4. Improve text rendering */
   -webkit-font-smoothing: antialiased;
 }
-/* 5. Improve media defaults */
 img,
 picture,
 video,
@@ -23,14 +19,12 @@ svg {
   display: block;
   max-width: 100%;
 }
-/* 6. Inherit fonts for form controls */
 input,
 button,
 textarea,
 select {
   font: inherit;
 }
-/* 7. Avoid text overflows */
 p,
 h1,
 h2,
@@ -40,7 +34,6 @@ h5,
 h6 {
   overflow-wrap: break-word;
 }
-/* 8. Improve line wrapping */
 p {
   text-wrap: wrap;
 }
@@ -52,9 +45,6 @@ h5,
 h6 {
   text-wrap: wrap;
 }
-/*
-  9. Create a root stacking context
-*/
 #root,
 #__next {
   isolation: isolate;
