--- a/src/Main/OrderFoodCard.module.css
+++ b/src/Main/OrderFoodCard.module.css
@@ -4,6 +4,7 @@
   border-radius: 8px;
 
   padding: 5px;
+  padding-top: 10px;
 }
 
 .topSection {
@@ -82,7 +83,7 @@
   cursor: pointer;
   background-color: transparent;
   text-decoration: underline;
-  font-size: 14px;
+  font-size: 12px;
   padding: 0;
 }
 
@@ -137,4 +138,10 @@
 .sliderButtonRight {
   border-top-right-radius: 12px;
   border-bottom-right-radius: 12px;
+}
+
+.finalAmountText {
+  font-size: 14px;
+  color: #1f1f1f;
+  margin: 0px 6px;
 }
