--- a/src/Main/OrderListComp.module.css
+++ b/src/Main/OrderListComp.module.css
@@ -1,5 +1,22 @@
+.orderListComp {
+  width: 100%;
+  max-width: 300px;
+  height: 100%;
+
+  background-color: #f2efef;
+  border-radius: 8px;
+
+  border: 1px solid #9a9a9a;
+
+  padding-top: 6px;
+  padding-bottom: 4px;
+  padding-right: 2px;
+  padding-left: 2px;
+}
+
 .orderList {
   width: 100%;
+  max-width: 300px;
   height: 100%;
 
   display: flex;
@@ -7,13 +24,8 @@
 
   overflow-y: auto;
 
-  padding: 6px 4px;
+  padding: 0px 4px;
   gap: 4px;
-
-  background-color: #f2efef;
-  border-radius: 8px;
-
-  border: 1px solid #9a9a9a;
 }
 
 /* fix scrol bar */
