--- a/src/StartScreen.module.css
+++ b/src/StartScreen.module.css
@@ -1,40 +1,13 @@
 .root {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: auto;
-    background-color: #1b2530;
-    color: black;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+  background-color: #edf2f6;
+  color: black;
 
-    cursor: pointer;
-    position: relative;
-}
-
-.image{
-    width: 100%;
-    height: 100%;
-    object-fit: fit;
-
-}
-
-.imageLayer {
-    width: 100%;
-    position: absolute;
-    left: 0;
-
-    animation: slideUpAndDown 2s infinite ease-in-out;
-}
-
-@keyframes slideUpAndDown {
-    0% {
-        top: 422px;
-    }
-    60% {
-        top: 418px;
-    }
-    100% {
-        top: 422px;
-    }
+  cursor: pointer;
+  position: relative;
 }
