--- a/src/StartScreen.module.css
+++ b/src/StartScreen.module.css
@@ -11,3 +11,28 @@
   cursor: pointer;
   position: relative;
 }
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: fit;
+}
+
+.imagePress {
+  width: 30%;
+  position: absolute;
+  right: 4%;
+  animation: slideUpAndDown 2s infinite ease-in-out;
+}
+
+@keyframes slideUpAndDown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
