--- a/src/CustomScreen.module.css
+++ b/src/CustomScreen.module.css
@@ -65,7 +65,7 @@
   flex-grow: 1;
 
   border: 1px solid #181818;
-  background-color: #6f94bc;
+  background-color: var(--color-action-button);
   border-radius: 8px;
   color: white;
   box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -220,7 +220,7 @@
 }
 
 .selected {
-  background-color: #6f94bc;
+  background-color: var(--color-action-button);
   color: white;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05);
   position: relative;
