--- a/src/Navigation/MainNavbar.module.css
+++ b/src/Navigation/MainNavbar.module.css
@@ -27,7 +27,7 @@
 }
 
 .active {
-  background-color: #6f94bc;
+  background-color: var(--color-action-button);
   color: white;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05),
     inset 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
