--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 :root {
   font-family: "Nunito", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
+
+  /* color variables */
+  --color-primary: #007bff;
+  --color-action-button: #6f94bc;
+  --color-secondary: #6c757d;
 }
