--- a/src/OrderConfirmedScreen.module.css
+++ b/src/OrderConfirmedScreen.module.css
@@ -119,7 +119,7 @@
 
 .receipt {
   position: absolute;
-  top: 0;
+  top: 20px;
   left: 0;
 
   z-index: 0;
@@ -138,7 +138,7 @@
   align-items: center;
 
   position: absolute;
-  top: 0;
+  top: 20px;
   left: 0;
 
   z-index: 1;
