--- a/src/StartScreen.module.css
+++ b/src/StartScreen.module.css
@@ -32,7 +32,7 @@
   font-weight: light;
 }
 
-@keyframes textAnim {
+/* @keyframes textAnim {
   0% {
     opacity: 0;
   }
@@ -42,4 +42,4 @@
   100% {
     opacity: 0;
   }
-}
+} */
