--- a/src/Main/OrderListComp.module.css
+++ b/src/Main/OrderListComp.module.css
@@ -6,7 +6,7 @@
   background-color: #f2efef;
   border-radius: 8px;
 
-  border: 1px solid #9a9a9a;
+  border: 1px solid #9a9a9a60;
 
   padding-top: 6px;
   padding-bottom: 4px;
