--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,6 +8,7 @@
   background-color: #20262c;
 
   color: black;
+  position: relative;
 }
 
 .app {
@@ -18,11 +19,11 @@
 }
 
 .abs {
+  width: 1024px;
+  height: 640px;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
   z-index: 10;
   border-radius: 12px;
   overflow: hidden;
