--- a/src/Main/FoodCard.module.css
+++ b/src/Main/FoodCard.module.css
@@ -17,7 +17,7 @@
   width: 100%;
   height: 100%;
   border-radius: 12px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.15);
   overflow: hidden;
   cursor: pointer;
   position: relative;
@@ -138,10 +138,10 @@
   position: absolute;
   bottom: 8px;
   right: 8px;
-  background-color: #ebf3ff;
+  background-color: #f6f9ff;
   color: black;
   border: 1px solid #00000033;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
   border-radius: 50%;
   width: 36px;
   height: 36px;
