--- a/src/MainScreen.module.css
+++ b/src/MainScreen.module.css
@@ -8,7 +8,7 @@
 
 .mainRootLeft {
   height: 100%;
-  flex-grow: 1;
+  width: 754px;
 }
 
 .mainRootRight {
@@ -127,7 +127,7 @@
 
 .orderButton {
   background-color: var(--color-action-button);
-  border: 1px solid rgb(75, 75, 75);
+  /* border: 1px solid rgb(75, 75, 75); */
 
   padding: 10px 0;
   border-radius: 8px;
@@ -138,7 +138,7 @@
   text-transform: uppercase;
   color: white;
 
-  box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
 
   flex-grow: 1;
 }
@@ -214,12 +214,12 @@
   color: white;
   padding: 6px 14px;
   border-radius: 8px;
-  border: 1px solid #575757;
+  /* border: 1px solid #575757; */
   font-size: 14px;
   font-weight: bold;
   cursor: pointer;
 
-  box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .callStaffButton:active {
