--- a/src/Navigation/MainNavbar.module.css
+++ b/src/Navigation/MainNavbar.module.css
@@ -11,16 +11,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 6px;
+  gap: 8px;
 }
 
 .button {
   color: black;
   background-color: white;
   border-radius: 24px;
+  border-radius: 24px;
   font-size: 14px;
   height: 40px;
-  border: 1px solid #181818;
+  width: 84px;
+  /* border: 1px solid #6f6f6f; */
+  border: none;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   cursor: pointer;
   font-weight: bold;
