--- a/src/CustomScreen.module.css
+++ b/src/CustomScreen.module.css
@@ -51,11 +51,11 @@
   width: 200px;
   height: 60px;
 
-  border: 1px solid #181818;
+  /* border: 1px solid #181818; */
   background-color: #4f4f4f;
-  border-radius: 8px;
+  border-radius: 6px;
   color: white;
-  box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.1);
 
   font-size: 20px;
   font-weight: bold;
@@ -64,11 +64,11 @@
 .addButton {
   flex-grow: 1;
 
-  border: 1px solid #181818;
+  /* border: 1px solid #181818; */
   background-color: var(--color-action-button);
-  border-radius: 8px;
+  border-radius: 6px;
   color: white;
-  box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.1);
 
   font-size: 20px;
   font-weight: bold;
