--- a/src/Main/OrderListComp.module.css
+++ b/src/Main/OrderListComp.module.css
@@ -6,7 +6,7 @@
   background-color: #f2efef;
   border-radius: 8px;
 
-  border: 1px solid #9a9a9a60;
+  /* border: 1px solid #9a9a9a60; */
 
   padding-top: 6px;
   padding-bottom: 4px;
@@ -24,8 +24,8 @@
 
   overflow-y: auto;
 
-  padding: 0px 4px;
-  gap: 4px;
+  padding: 2px 6px;
+  gap: 6px;
 }
 
 /* fix scrol bar */
