--- a/src/Main/FoodCard.module.css
+++ b/src/Main/FoodCard.module.css
@@ -17,7 +17,6 @@
   width: 100%;
   height: 100%;
   border-radius: 12px;
-  box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   cursor: pointer;
   position: relative;
@@ -28,6 +27,8 @@
   -webkit-tap-highlight-color: transparent;
 
   /* border: 1px solid #c3c3c363; */
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 .cardRoot:nth-child(1) {
@@ -96,12 +97,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  border-bottom: 1px solid #0a0a0a;
+  /* border-bottom: 1px solid #5b5b5b51; */
 }
 
 .content {
-  padding: 10px;
-  background-color: #ebf2f7d2;
+  padding: 14px;
+  background-color: #e5eff7d2;
   width: 100%;
   height: 100%;
   display: flex;
@@ -139,11 +140,15 @@
   position: absolute;
   bottom: 8px;
   right: 8px;
-  background-color: #f6f9ff;
+  background-color: #cae7f4;
   color: black;
-  border: 1px solid #00000033;
-  /* box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1); */
-  border-radius: 50%;
+  /* border: 1px solid #00000033; */
+  /* box-shadow: 0px 0px 2px 0px rgba(9, 9, 9, 0.2); */
+  border-radius: 12px;
+  /* border-top-left-radius: 12px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 12px; */
   width: 36px;
   height: 36px;
   display: flex;
