--- a/src/Main/OrderFoodCard.module.css
+++ b/src/Main/OrderFoodCard.module.css
@@ -1,10 +1,10 @@
 .cardRoot {
   background-color: white;
   /* border: 1px solid #4e4e4e; */
-  box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 2px;
   border-radius: 8px;
 
-  padding: 5px;
+  padding: 6px;
   padding-top: 10px;
 }
 
