--- a/src/Main/OrderListComp.module.css
+++ b/src/Main/OrderListComp.module.css
@@ -6,9 +6,9 @@
   background-color: #f2efef;
   border-radius: 8px;
 
-  /* border: 1px solid #9a9a9a60; */
+  border: 1px solid #9a9a9a60;
 
-  padding-top: 6px;
+  padding-top: 4px;
   padding-bottom: 4px;
   padding-right: 2px;
   padding-left: 2px;
@@ -24,7 +24,7 @@
 
   overflow-y: auto;
 
-  padding: 2px 6px;
+  padding: 2px 4px;
   gap: 6px;
 }
 
