--- a/src/Navigation/MainNavbar.module.css
+++ b/src/Navigation/MainNavbar.module.css
@@ -22,9 +22,7 @@
   font-size: 14px;
   height: 40px;
   width: 84px;
-  /* border: 1px solid #6f6f6f; */
-  border: none;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   font-weight: bold;
 }
@@ -45,7 +43,7 @@
   height: 0;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-bottom: 10px solid #ffffff;
+  border-bottom: 10px solid #f2f2f2;
   margin: 0 auto;
   bottom: -16px;
   left: 50%;
