--- a/src/Main/FoodCard.module.css
+++ b/src/Main/FoodCard.module.css
@@ -140,7 +140,7 @@
   position: absolute;
   bottom: 8px;
   right: 8px;
-  background-color: #cae7f4;
+  background-color: #ceeaf7;
   color: black;
   /* border: 1px solid #00000033; */
   /* box-shadow: 0px 0px 2px 0px rgba(9, 9, 9, 0.2); */
