--- a/src/MainScreen.module.css
+++ b/src/MainScreen.module.css
@@ -8,12 +8,12 @@
 
 .mainRootLeft {
   height: 100%;
-  width: 754px;
+  width: 744px;
 }
 
 .mainRootRight {
   height: 100%;
-  width: 270px;
+  width: 280px;
 }
 
 .customRoot {
@@ -43,9 +43,9 @@
   flex-direction: column;
 
   /* border-left: 1px solid #83838364; */
-  box-shadow: 0px 0px 3px 0px #0000002d;
-  background-color: white;
-  padding: 4px 8px;
+  box-shadow: 0px 0px 3px 0px #0000005b;
+  background-color: rgb(248, 248, 251);
+  padding: 4px 12px;
 }
 
 .navBar {
