--- a/src/Navigation/BottomNavbar.module.css
+++ b/src/Navigation/BottomNavbar.module.css
@@ -20,9 +20,9 @@
   align-items: center;
   gap: 6px;
 
-  font-size: 14px;
-  height: 40px;
-  width: 140px;
+  font-size: 13px;
+  height: 35px;
+  width: 130px;
   /* border: 1px solid #717171; */
   box-shadow: rgba(0, 0, 0, 0.2) 4px 4px;
   cursor: pointer;
@@ -67,8 +67,8 @@
 
 .prevButtonIMG,
 .nextButtonIMG {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
 }
 
 .prevButton:disabled .prevButtonIMG,
@@ -100,8 +100,10 @@
 }
 
 .pageText {
-  font-size: 14px;
+  font-size: 12px;
   color: #454545;
   margin-top: 2px;
+  font-weight: 500;
+  font-family: "Inter", sans-serif;
   /* font-weight: bold; */
 }
