--- a/src/OrderConfirmedScreen.module.css
+++ b/src/OrderConfirmedScreen.module.css
@@ -54,10 +54,13 @@
 
 .orderSum {
   display: flex;
-  align-self: start;
+  align-self: center;
   gap: 8px;
   margin-bottom: 8px;
+  margin-top: 16px;
+  font-weight: bold;
   font-size: 24px;
+  font-family: "Inter", sans-serif;
 }
 
 .doneButton {
@@ -83,10 +86,11 @@
 
 .priceCont {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: end;
   gap: 4px;
-  align-self: start;
+  align-self: center;
+  font-family: "Inter", sans-serif;
 }
 
 .totalText {
@@ -114,7 +118,7 @@
   margin-bottom: 6px;
 
   text-wrap: nowrap;
-  align-self: start;
+  align-self: center;
 }
 
 .receipt {
@@ -123,6 +127,8 @@
   left: 0;
 
   z-index: 0;
+
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
 .imageTop {
