--- a/src/Reset.css
+++ b/src/Reset.css
@@ -18,6 +18,9 @@ canvas,
 svg {
   display: block;
   max-width: 100%;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  user-drag: none;
 }
 input,
 button,
