--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,6 +11,15 @@
   position: relative;
 }
 
+.all {
+  width: 1200px;
+  height: 720px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .app {
   width: 1024px;
   height: 640px;
@@ -39,7 +48,7 @@
   background-color: rgb(81, 81, 81);
   border-radius: 5px;
   z-index: 0;
-  box-shadow: 0px 4px 10px 10px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0px 4px 10px 10px rgba(0, 0, 0, 0.2); */
 }
 
 .soundButtonOnTop {
@@ -52,7 +61,7 @@
   background-color: rgb(81, 81, 81);
   border-radius: 5px;
   z-index: 0;
-  box-shadow: 0px 4px 10px 10px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0px 4px 10px 10px rgba(0, 0, 0, 0.2); */
 }
 
 .soundButtonOnTop::after {
@@ -116,5 +125,5 @@
   border-radius: 22px;
   background-color: #313131;
   border: 2px solid #585858;
-  box-shadow: 0px 4px 10px 10px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0px 4px 10px 10px rgba(0, 0, 0, 0.2); */
 }
