--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   overflow: auto;
-  background-color: #20262c;
+  background-color: transparent;
 
   color: black;
   position: relative;
