--- a/src/CustomScreen.module.css
+++ b/src/CustomScreen.module.css
@@ -61,6 +61,11 @@
   font-weight: bold;
 }
 
+.disabled {
+  opacity: 0.75;
+  cursor: not-allowed !important;
+}
+
 .addButton {
   flex-grow: 1;
 
