--- a/src/CustomScreen.module.css
+++ b/src/CustomScreen.module.css
@@ -99,6 +99,15 @@
   flex-grow: 1;
   color: #5a4504;
   font-size: 14px;
+  overflow: auto;
+}
+
+.description::-webkit-scrollbar {
+  width: 4px;
+}
+.description::-webkit-scrollbar-thumb {
+  background-color: #9a9a9a;
+  border-radius: 4px;
 }
 
 .allergens {
