--- a/src/Main/FoodCard.module.css
+++ b/src/Main/FoodCard.module.css
@@ -1,7 +1,7 @@
 @keyframes fadeInPop {
   0% {
     opacity: 0.5;
-    /* transform: scale(0.95); */
+    transform: scale(0.95);
   }
   100% {
     opacity: 1;
